# CustomMemoryAllocator

./: .gitignore  CMakeLists.txt  README.md
include/: BlockMetadata.hpp  FreeList.hpp  MemoryAllocator.hpp
src/: FreeList.cpp  MemoryAllocator.cpp
tests/: test_basic.cpp  test_fragmentation.cpp  test_main.cpp
